# nest

./: .gitignore  PRD_Nest_Home.md  appcast.xml  gmail_api_reference.md  google_calendar_api_reference.md  peopledatalabs_api_reference.md  slack-redirect.html  supabase_schema.sql
.claude/: settings.local.json
TapMeeting/: Info.plist  TapMeeting.entitlements  TapMeetingApp.swift
TapMeeting.xcodeproj/: project.pbxproj
TapMeeting/App/: AppDelegate.swift  AppState.swift  Constants.swift  Theme.swift
TapMeeting/Models/: AppleNote.swift  AudioSource.swift  ContactRule.swift  Folder.swift  GoogleCalendarList.swift  LiveUtterance.swift  MeetingStatus.swift  Note.swift  NoteType.swift  SemanticSearch.swift  StyleProfile.swift  Tag.swift  TodoItem.swift  Utterance.swift
TapMeeting/Utilities/: KeychainHelper.swift  LoopbackServer.swift  ToolbarSafeAreaCompensation.swift  WindowConfigurator.swift
TapMeetingTests/: TapMeetingTests.swift
TapMeetingUITests/: TapMeetingUITests.swift  TapMeetingUITestsLaunchTests.swift
imessage-bridge/: .env.example  pyproject.toml
imessage-bridge/imessage_bridge/: __main__.py  config.py  state.py
imessage-bridge/imessage_bridge/sender/: imessage.py  listener.py  outbound_poller.py
imessage-bridge/imessage_bridge/watcher/: chat_db.py  fs_monitor.py  processor.py  trigger_checker.py
onboard-web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
onboard-web/src/: App.css  App.tsx
supabase/: config.toml
supabase/migrations/: 20260217200000_rag_v2_hnsw_rrf.sql  20260217_add_note_archive.sql  (+18 more)
(+161 files in other folders)
